<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:debuggable="true"
    android:background="@drawable/background"
    tools:context=".TakeQuiz" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:weightSum="1"
        android:baselineAligned="false"
        android:id="@+id/mainLayout"
        android:orientation="vertical" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scoreView"
                android:text="@string/score"
                android:textSize="17dp"
                android:linksClickable="false"
                android:layout_weight="0.33"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timer"
                android:text="@string/timer"
                android:textSize="17dp"
                android:linksClickable="false"
                android:layout_weight="0.34"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:id="@+id/pauseButton"
                android:text="@string/pause"
                android:layout_weight="0.33"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/questionTextView"
            android:text="@string/question"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/answersGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonA"
                android:checked="false"
                android:text="@string/a"
                android:textSize="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonB"
                android:checked="false"
                android:text="@string/b"
                android:textSize="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonC"
                android:checked="false"
                android:text="@string/c"
                android:textSize="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonD"
                android:checked="false"
                android:text="@string/d"
                android:textSize="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:id="@+id/submitButton"
            android:text="@string/submit" />


    </LinearLayout>
</RelativeLayout>